Bug 499823 - Wrongly labeled flatpak audio permissions!
Summary: Wrongly labeled flatpak audio permissions!
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: Flatpak Backend (other bugs)
Version First Reported In: 6.2.5
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-02-11 16:44 UTC by mnet77
Modified: 2025-02-19 16:14 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed In: 6.4.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description mnet77 2025-02-11 16:44:06 UTC
SUMMARY
For any flatpak application to be able to play sound, you need to grant it the permission to use the Pulse audio server. Unfortunately for now flatpaks dont allow you to control, whether you just want to grant the permission of audio output or audio input, just to the whole pulse audio server. (https://github.com/flatpak/flatpak/issues/6082 ; https://github.com/flatpak/xdg-desktop-portal/discussions/1142)
Discover translates this permission into "Application can play audio", which is clearly false and could maybe even be seen as a security concern for users with little knowledge in this aspect.

STEPS TO REPRODUCE
Search for any flatpak application, which clearly can use your microphone, like audacity or dicord.

OBSERVED RESULT
Look at the listed audio permissions. "Can play audio"

EXPECTED RESULT
"Can play audio"
"Can use microphone(maybe a disclaimer here so people dont think everything is spyware)"
OR
"Has access to pc audio"
ADDITIONAL INFORMATION
Its very unfortunate that flatpaks cant be configure in that way yet, but I definitely think discover should disclose this.
Comment 1 Nate Graham 2025-02-19 16:14:32 UTC
Git commit 3faaf562100d8e874a8c47e5fed07feaff524a5e by Nate Graham.
Committed on 19/02/2025 at 16:13.
Pushed by ngraham into branch 'master'.

Correct pulseaudio permission description string

This doesn't just let the app play audio, but also record it.
FIXED-IN: 6.4.0

M  +1    -1    libdiscover/backends/FlatpakBackend/FlatpakResource.cpp

https://invent.kde.org/plasma/discover/-/commit/3faaf562100d8e874a8c47e5fed07feaff524a5e