Correct pulseaudio permission description string

This doesn't just let the app play audio, but also record it.

BUG: 499823
FIXED-IN: 6.4.0